# ternary-tools

./: Cargo.toml  LICENSE  README.md  ternary-tools.rs
.github/workflows/: ci.yml
contracts/: runtime-contract.json
docs/: phase2-inspection-checklist.md
